--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Студия</a></li>
@@ -23,8 +23,8 @@
     </header>
     <main>
       <section>
-        <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <input type="button" value="Заказать услугу" />
+        <h1>Эффективное решение вашего бизнеса</h1>
+        <button name="button">Заказать услугу</button>
       </section>
       <section>
         <h2>Наши преимущества</h2>
@@ -107,7 +107,7 @@
       </section>
     </main>
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
         <ul>
           <li>
