--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ДЗ№1</title>
+    <title>ДЗ№2</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
@@ -13,7 +14,7 @@
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#contact">Контакты</a></li>
         </ul>
       </nav>
       <ul>
@@ -118,7 +119,7 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
+          <li><a name="contact" class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
