--- a/index.html
+++ b/index.html
@@ -5,64 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ДЗ№2</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
+    <!--HEDER-->
+    <header class="pages-heder">
+      <a class="link logo" href="./index.html"><span class="acsent-logo">Web</span>Studio</a>
       <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="#contact">Контакты</a></li>
+        <ul class="menu list">
+          <li><a class="link menu-item" href="./index.html">Студия</a></li>
+          <li><a class="link menu-item" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link menu-item" href="#contact">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstdio.com">info@vevstudio.com</a></li>
-        <li><a href="tel:+380961111111">+380961111111</a></li>
+      <ul class="list">
+        <li><a class="link contact-mail" href="mailto:info@devstdio.com">info@vevstudio.com</a></li>
+        <li><a class="link contact-phone" href="tel:+380961111111">+380961111111</a></li>
       </ul>
     </header>
+    <!--HERO-->
     <main>
-      <section>
-        <h1>Эффективное решение вашего бизнеса</h1>
-        <button name="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-text">Эффективное решение<br />для вашего бизнеса</h1>
+        <button class="hero-btn" name="button">Заказать услугу</button>
       </section>
       <section>
-        <h2>Наши преимущества</h2>
-        <ul>
+        <!--Benefits-->
+        <!-- <h2>Наши преимущества</h2> -->
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="topic">Внимание к деталям</h3>
+            <p class="rubric">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="topic">Пунктуальность</h3>
+            <p class="rubric">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="topic">Планирование</h3>
+            <p class="rubric">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="topic">Современные технологии</h3>
+            <p class="rubric">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
+      <!--Studies-->
       <section>
-        <h2>чем мы занимаемся</h2>
-        <ul>
+        <h2 class="stud-top">чем мы занимаемся</h2>
+        <ul class="list doing">
           <li>
-            <img src="./images/work-for-pc.jpg" alt="work for pc" width="370" height="294" />
+            <img class="img-doing" src="./images/work-for-pc.jpg" alt="work for pc" width="370" height="294" />
           </li>
           <li>
-            <img src="./images/laptop-work.jpg" alt="laptop work" width="370" height="294" />
+            <img class="img-doing" src="./images/laptop-work.jpg" alt="laptop work" width="370" height="294" />
           </li>
           <li>
-            <img
+            <img class="img-doing"
               src="./images/work-on-a-tablet.jpg"
               alt="work on a tablet"
               width="370"
@@ -71,9 +85,10 @@
           </li>
         </ul>
       </section>
+      <!--Team-->
       <section>
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="team">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/igor-demyanenki.jpg"
@@ -81,46 +96,51 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Desinger</p>
+            <h3 class="team-names">Игорь Демьяненко</h3>
+            <p class="team-prof">Product Desinger</p>
           </li>
           <li>
             <img src="./images/olga-repina.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-names">Ольга Репина</h3>
+            <p class="team-prof">Frontend Developer</p>
           </li>
           <li>
-            <img
+            <img 
               src="./images/nikolay-tarasov.jpg"
               alt="Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-names">Николай Тарасов</h3>
+            <p class="team-prof">Marketing</p>
           </li>
           <li>
             <img src="./images/michail-ermakov.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-names">Михаил Ермаков</h3>
+            <p class="team-prof">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <!--footer-->
+    <footer class="foot">
+      <a class="link logo" href="./index.html"><span class="acsent-logo">Web</span>Studio</a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
+              class="link maps"
               href="https://goo.gl/maps/6wFw4vnAE2UTVkqL7"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a name="contact" class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a id="contact" class="link contact-mail" href="mailto:info@example.com">info@example.com</a
+            >
+          </li>
+          <li><a class="link contact-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
