поправки от ментора

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a class="link logo" href="./index.html"><span class="acsent-logo">Web</span>Studio</a>
       <nav>
         <ul class="menu list">
-          <li><a class="link menu-item" href="./index.html">Студия</a></li>
+          <li><a class="link menu-item current" href="./index.html">Студия</a></li>
           <li><a class="link menu-item" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link menu-item" href="#contact">Контакты</a></li>
         </ul>
@@ -37,7 +37,7 @@
       </section>
       <section>
         <!--Benefits-->
-        <!-- <h2>Наши преимущества</h2> -->
+        <h2 class="visually-hidden">Наши преимущества</h2>
         <ul class="list">
           <li>
             <h3 class="topic">Внимание к деталям</h3>
@@ -67,7 +67,7 @@
       </section>
       <!--Studies-->
       <section>
-        <h2 class="stud-top">чем мы занимаемся</h2>
+        <h2 class="stud-top">Чем мы занимаемся</h2>
         <ul class="list doing">
           <li>
             <img class="img-doing" src="./images/work-for-pc.jpg" alt="work for pc" width="370" height="294" />
@@ -86,7 +86,7 @@
         </ul>
       </section>
       <!--Team-->
-      <section>
+      <section class="perfuse">
         <h2 class="team">Наша команда</h2>
         <ul class="list">
           <li>
@@ -124,8 +124,8 @@
     </main>
     <!--footer-->
     <footer class="foot">
-      <a class="link logo" href="./index.html"><span class="acsent-logo">Web</span>Studio</a>
-      <address>
+      <a class="link logo-footer" href="./index.html"><span class="acsent-logo">Web</span>Studio</a>
+      <address class="adress-style">
         <ul class="list">
           <li>
             <a
