--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       <nav>
         <ul class="menu list">
           <li><a class="link menu-item" href="./index.html">Студия</a></li>
-          <li><a class="link menu-item" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link menu-item current" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link menu-item" href="#contact">Контакты</a></li>
         </ul>
       </nav>
@@ -31,86 +31,102 @@
     </header>
     <!--HERO-->
     <main>
-      <!-- <h1>button list</h1> -->
-      <ul class="list">
-        <li>
-          <button class="portfolio-btn" type="button">Все</button>
-        </li>
-        <li>
-          <button class="portfolio-btn" type="button">Веб-Сайты</button>
-        </li>
-        <li>
-          <button class="portfolio-btn" type="button">Приложения</button>
-        </li>
-        <li>
-          <button class="portfolio-btn" type="button">Дизайн</button>
-        </li>
-        <li>
-          <button class="portfolio-btn" type="button">Маркетинг</button>
-        </li>
-      </ul>
-      <!--link-->
-      <ul class="list">
-        <li>
-          <a class="link" rel="preconnect" href="#"></a>
-          <img src="./images/crack.jpg" alt="design" width="370" height="294" />
-          <h3 class="caption-text">Технокряк</h3>
-          <p class="basic-text">Веб-Сайт</p>
-        </li>
-        <li>
-          <a class="link" rel="preconnect" href="#"></a>
-          <img src="./images/star.jpg" alt="Poster" width="370" height="294" />
-          <h3 class="caption-text">Постер New Orlean vs Golden Star</h3>
-          <p class="basic-text">Дизайн</p>
-        </li>
-        <li>
-          <a class="link" rel="preconnect" href="#"></a>
-          <img src="./images/seafood.jpg" alt="shark" width="370" height="294" />
-          <h3 class="caption-text">Ресторан Seafood</h3>
-          <p class="basic-text">Приложение</p>
-        </li>
-        <li>
-          <a class="link" rel="preconnect" href="#"></a>
-          <img src="./images/prime.jpg" alt="garniture" width="370" height="294" />
-          <h3 class="caption-text">Проект Prime</h3>
-          <p class="basic-text">Маркетинг</p>
-        </li>
-        <li>
-          <a class="link" rel="preconnect" href="#"></a>
-          <img src="./images/boxes.jpg" alt="box-in-box" width="370" height="294" />
-          <h3 class="caption-text">Проект Boxes</h3>
-          <p class="basic-text">Приложение</p>
-        </li>
-        <li>
-          <a class="link" rel="preconnect" href="#"></a>
-          <img src="./images/borders.jpg" alt="desktop" width="370" height="294" />
-          <h3 class="caption-text">Inspiration has on Borders</h3>
-          <p class="basic-text">Веб-Сайт</p>
-        </li>
-        <li>
-          <a class="link" rel="preconnect" href="#"></a>
-          <img src="./images/limited-edition.jpg" alt="book" width="370" height="294" />
-          <h3 class="caption-text">Издание Limited Edition</h3>
-          <p class="basic-text">Дизайн</p>
-        </li>
-        <li>
-          <a class="link" rel="preconnect" href="#"></a>
-          <img src="./images/lab.jpg" alt="design" width="370" height="294" />
-          <h3 class="caption-text">Проект LAB</h3>
-          <p class="basic-text">Маркетинг</p>
-        </li>
-        <li>
-          <a class="link" rel="preconnect" href="#"></a>
-          <img src="./images/growing-business.jpg" alt="laptop-work" width="370" height="294" />
-          <h3 class="caption-text">Growing Business</h3>
-          <p class="basic-text">Приложение</p>
-        </li>
-      </ul>
+      <section>
+        <h1 class="visually-hidden">Portfolio</h1>
+        <ul class="list">
+          <li>
+            <button class="portfolio-btn" type="button">Все</button>
+          </li>
+          <li>
+            <button class="portfolio-btn" type="button">Веб-Сайты</button>
+          </li>
+          <li>
+            <button class="portfolio-btn" type="button">Приложения</button>
+          </li>
+          <li>
+            <button class="portfolio-btn" type="button">Дизайн</button>
+          </li>
+          <li>
+            <button class="portfolio-btn" type="button">Маркетинг</button>
+          </li>
+        </ul>
+        <!--link-->
+        <ul class="list">
+          <li>
+            <a class="link" rel="preconnect" href="#">
+              <img src="./images/crack.jpg" alt="design" width="370" height="294" />
+              <h2 class="caption-text">Технокряк</h3>
+              <p class="basic-text">Веб-Сайт</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" rel="preconnect" href="#">
+              <img src="./images/star.jpg" alt="Poster" width="370" height="294" />
+              <h2 class="caption-text">Постер New Orlean vs Golden Star</h3>
+              <p class="basic-text">Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" rel="preconnect" href="#">
+              <img src="./images/seafood.jpg" alt="shark" width="370" height="294" />
+              <h2 class="caption-text">Ресторан Seafood</h3>
+              <p class="basic-text">Приложение</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" rel="preconnect" href="#">
+              <img src="./images/prime.jpg" alt="garniture" width="370" height="294" />
+              <h2 class="caption-text">Проект Prime</h3>
+              <p class="basic-text">Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" rel="preconnect" href="#">
+              <img src="./images/boxes.jpg" alt="box-in-box" width="370" height="294" />
+              <h2 class="caption-text">Проект Boxes</h3>
+              <p class="basic-text">Приложение</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" rel="preconnect" href="#">
+              <img src="./images/borders.jpg" alt="desktop" width="370" height="294" />
+              <h2 class="caption-text">Inspiration has on Borders</h3>
+              <p class="basic-text">Веб-Сайт</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" rel="preconnect" href="#">
+              <img src="./images/limited-edition.jpg" alt="book" width="370" height="294" />
+              <h2 class="caption-text">Издание Limited Edition</h3>
+              <p class="basic-text">Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" rel="preconnect" href="#">
+              <img src="./images/lab.jpg" alt="design" width="370" height="294" />
+              <h2 class="caption-text">Проект LAB</h3>
+              <p class="basic-text">Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" rel="preconnect" href="#"
+              ><img
+                src="./images/growing-business.jpg"
+                alt="laptop-work"
+                width="370"
+                height="294"
+              />
+              <h2 class="caption-text">Growing Business</h3>
+              <p class="basic-text">Приложение</p></a
+            >
+          </li>
+        </ul>
+      </section>
     </main>
     <!--footer-->
     <footer class="foot">
       <a class="link logo" href="./index.html"><span class="acsent-logo">Web</span>Studio</a>
-      <address>
+      <address class="adress-style">
         <ul class="list">
           <li>
             <a
