--- a/index.html
+++ b/index.html
@@ -70,13 +70,26 @@
         <h2 class="stud-top">Чем мы занимаемся</h2>
         <ul class="list doing">
           <li>
-            <img class="img-doing" src="./images/work-for-pc.jpg" alt="work for pc" width="370" height="294" />
+            <img
+              class="img-doing"
+              src="./images/work-for-pc.jpg"
+              alt="work for pc"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img class="img-doing" src="./images/laptop-work.jpg" alt="laptop work" width="370" height="294" />
+            <img
+              class="img-doing"
+              src="./images/laptop-work.jpg"
+              alt="laptop work"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img class="img-doing"
+            <img
+              class="img-doing"
               src="./images/work-on-a-tablet.jpg"
               alt="work on a tablet"
               width="370"
@@ -105,7 +118,7 @@
             <p class="team-prof">Frontend Developer</p>
           </li>
           <li>
-            <img 
+            <img
               src="./images/nikolay-tarasov.jpg"
               alt="Николай Тарасов"
               width="270"
@@ -137,7 +150,8 @@
             >
           </li>
           <li>
-            <a id="contact" class="link contact-mail" href="mailto:info@example.com">info@example.com</a
+            <a id="contact" class="link contact-mail" href="mailto:info@example.com"
+              >info@example.com</a
             >
           </li>
           <li><a class="link contact-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
