--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             <button class="portfolio-btn" type="button">Все</button>
           </li>
           <li>
-            <button class="portfolio-btn" type="button">Веб-Сайты</button>
+            <button class="portfolio-btn" type="button">Веб-сайты</button>
           </li>
           <li>
             <button class="portfolio-btn" type="button">Приложения</button>
@@ -56,7 +56,7 @@
             <a class="link" rel="preconnect" href="#">
               <img src="./images/crack.jpg" alt="design" width="370" height="294" />
               <h2 class="caption-text">Технокряк</h3>
-              <p class="basic-text">Веб-Сайт</p>
+              <p class="basic-text">Веб-сайт</p>
             </a>
           </li>
           <li>
@@ -125,8 +125,8 @@
     </main>
     <!--footer-->
     <footer class="foot">
-      <a class="link logo" href="./index.html"><span class="acsent-logo">Web</span>Studio</a>
-      <address class="adress-style">
+      <a class="link logo-footer" href="./index.html"><span class="acsent-logo">Web</span>Studio</a>
+       <address class="adress-style">
         <ul class="list">
           <li>
             <a
